--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
   height: 80vh;
 
   border: 1px solid black;
+  position: relative;
 }
 
 .table {
+  position: absolute;
   width: 50px;
   height: 50px;
   background: red;
